Minor refactoring of configuration stuff.