@@ -9,211 +9,56 @@ import java.io.FileReader;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Properties;
-import java.util.TreeMap;
 
 import org.neo4j.rest.domain.DatabaseLocator;
 import org.neo4j.rest.domain.Representation;
-import org.neo4j.webadmin.AdminServer;
 import org.neo4j.webadmin.domain.NoSuchPropertyException;
 import org.neo4j.webadmin.domain.ServerPropertyRepresentation;
-import org.neo4j.webadmin.domain.ServerPropertyRepresentation.PropertyType;
-import org.neo4j.webadmin.utils.PlatformUtils;
 
 /**
- * Definition of properties that affect the neo4j server. This contains both the
- * definition and the load/save code.
+ * This class contains contains the code for loading and saving server
+ * properties. This includes reading and writing properties to and from the
+ * appropriate configuration files.
  * 
- * This class also contains a hard-coded definition of what settings are to be
- * available to the client, and how to handle them.
- * 
- * TODO: This has far outgrown its initial purpose and is in need of
- * refactoring.
+ * TODO: This was a bad idea from the beginning. Since then, it has far outgrown
+ * its initial purpose and is in heavy need of refactoring.
  * 
  * @author Jacob Hansson <jacob@voltvoodoo.com>
  * 
  */
-public class ServerProperties implements Representation
+public class ServerConfiguration implements Representation
 {
 
     public static final String FALLBACK_MAX_HEAP = "512M";
     public static final String FALLBACK_MIN_HEAP = "512M";
 
+    private static ServerConfiguration INSTANCE;
+
     /**
      * This is the properties file that is read and used by the underlying neo4j
      * instance.
      */
-    protected static volatile Properties dbConfig;
+    private Properties dbConfig;
 
     /**
      * This property file stores configuration used when launching the JVM and
      * when creating a new database.
      */
-    protected static volatile Properties generalConfig;
+    private Properties generalConfig;
 
-    protected static ServerProperties INSTANCE;
-
-    protected ArrayList<ServerPropertyRepresentation> properties = createProperties();
+    private ArrayList<ServerPropertyRepresentation> properties = ServerPropertyDefinitions.getPropertyDefinitions();
 
     /**
-     * This is the hard-coded settings that will be exposed to the user.
-     * 
-     * Each property should have a unique key, for neo4j config file and server
-     * creation properties this should be the property name. For JVM args it is
-     * irrelevant, but it is recommended to name them something like
-     * "jvm.myproperty".
-     * 
-     * A note on how values are fetched:
-     * 
-     * For CONFIG_PROPERTY properties, the value will be fetched from the neo4j
-     * config file. If no property with a matching key is found, the default
-     * value you speciSizefy will be used.
-     * 
-     * For JVM_ARGUMENT, APP_ARGUMENT and DB_CREATION_PROPERTY the value will be
-     * fetched from a separate config file, startup.properties in the neo4j
-     * database folder. If no property with a matching key is found, the default
-     * value you specify will be used.
-     * 
-     */
-    protected static ArrayList<ServerPropertyRepresentation> createProperties()
-    {
-        ArrayList<ServerPropertyRepresentation> properties = new ArrayList<ServerPropertyRepresentation>();
-
-        //
-        // JVM ARGS
-        //
-
-        if ( DatabaseLocator.isLocalDatabase() )
-        {
-
-            // Garbage collector
-            TreeMap<String, String> gcs = new TreeMap<String, String>();
-            gcs.put( "Serial GC", "-XX:+UseSerialGC" );
-            gcs.put( "Throughput GC", "-XX:+UseParallelGC" );
-            gcs.put( "Concurrent Low Pause GC", "-XX:+UseConcMarkSweepGC" );
-            gcs.put( "Incremental Low Pause GC", "-Xincgc" );
-
-            properties.add( new ServerPropertyRepresentation(
-                    "jvm.garbagecollector", "Garbage collector",
-                    "-XX:+UseSerialGC", PropertyType.JVM_ARGUMENT,
-                    new ValueDefinition( "", "", gcs ) ) );
-
-            // Min heap size
-            properties.add( new ServerPropertyRepresentation(
-                    "jvm.min_heap_size", "Min heap size", "512m",
-                    PropertyType.JVM_ARGUMENT, new ValueDefinition( "-Xms", "" ) ) );
-
-            // Max heap size
-            properties.add( new ServerPropertyRepresentation(
-                    "jvm.max_heap_size", "Max heap size", "512m",
-                    PropertyType.JVM_ARGUMENT, new ValueDefinition( "-Xmx", "" ) ) );
-
-            // JVM server mode
-            if ( PlatformUtils.jvmServerModeIsAvailable() )
-            {
-                properties.add( new ServerPropertyRepresentation( "jvm.server",
-                        "JVM server mode", "", PropertyType.JVM_ARGUMENT,
-                        new ValueDefinition( "", "", "-server" ) ) );
-            }
-        }
-        //
-        // APP ARGS
-        //
-
-        // Static web content folder
-        properties.add( new ServerPropertyRepresentation( "web.root",
-                "Web root", AdminServer.INSTANCE.getStaticPath(),
-                PropertyType.APP_ARGUMENT,
-                new ValueDefinition( "-webRoot=", "" ) ) );
-
-        // Database folder
-        properties.add( new ServerPropertyRepresentation( "db.root",
-                "Database location", DatabaseLocator.getDatabaseLocation(),
-                PropertyType.APP_ARGUMENT, new ValueDefinition( "-dbPath=", "" ) ) );
-
-        //
-        // CONFIG FILE ARGS
-        //
-
-        if ( DatabaseLocator.isLocalDatabase() )
-        {
-
-            // Logical logs
-            properties.add( new ServerPropertyRepresentation(
-                    "keep_logical_logs", "Enable logical logs", "false",
-                    PropertyType.CONFIG_PROPERTY, new ValueDefinition( "", "",
-                            "true", "false" ) ) );
-
-            // Remote shell
-            properties.add( new ServerPropertyRepresentation(
-                    "enable_remote_shell", "Enable remote shell", "false",
-                    PropertyType.CONFIG_PROPERTY, new ValueDefinition( "", "",
-                            "true", "false" ) ) );
-
-            // This is commented out, waiting for authentication scheme to be
-            // switched over to OAuth.
-
-            // properties.add( new ServerPropertyRepresentation(
-            // "rest_enable_authentication", "Enable authentication", "false",
-            // PropertyType.CONFIG_PROPERTY ) );
-            //
-            // properties.add( new ServerPropertyRepresentation(
-            // "rest_username",
-            // "Authentication username", "", PropertyType.CONFIG_PROPERTY ) );
-            //
-            // properties.add( new ServerPropertyRepresentation(
-            // "rest_password",
-            // "Authentication password", "", PropertyType.CONFIG_PROPERTY ) );
-
-            // DB CREATION ARGS
-
-            properties.add( new ServerPropertyRepresentation(
-                    "create.array_block_size", "Array block size", "133",
-                    PropertyType.DB_CREATION_PROPERTY ) );
-
-            properties.add( new ServerPropertyRepresentation(
-                    "create.string_block_size", "String block size", "133",
-                    PropertyType.DB_CREATION_PROPERTY ) );
-        }
-        else
-        {
-
-            // JMX URI
-            properties.add( new ServerPropertyRepresentation(
-                    "general.jmx.uri", "JMX URI", "",
-                    PropertyType.GENERAL_PROPERTY ) );
-
-        }
-
-        //
-        // GENERAL SETTINGS
-        // Used directly by webadmin
-
-        // Backup path
-        properties.add( new ServerPropertyRepresentation(
-                "general.backup.path", "Backup path", "",
-                PropertyType.GENERAL_PROPERTY ) );
-
-        // Properties to list in data browser
-        properties.add( new ServerPropertyRepresentation(
-                "general.data.listfields", "Data browser list fields", "name",
-                PropertyType.GENERAL_PROPERTY ) );
-
-        return properties;
-
-    }
-
-    /**
-     * Somewhat cumbersome singleton implementation to allow IOException to
-     * bubble up nicely.
+     * Singleton instance.
      * 
      * @return
      * @throws IOException
      */
-    public static ServerProperties getInstance()
+    public static ServerConfiguration getInstance()
     {
         if ( INSTANCE == null )
         {
-            INSTANCE = new ServerProperties();
+            INSTANCE = new ServerConfiguration();
         }
         return INSTANCE;
     }
@@ -222,7 +67,7 @@ public class ServerProperties implements Representation
     // CONSTRUCT
     //
 
-    protected ServerProperties()
+    protected ServerConfiguration()
     {
         try
         {
@@ -287,8 +132,8 @@ public class ServerProperties implements Representation
     }
 
     /**
-     * Change a setting. This applies immediately, but does not restart any
-     * running server instance.
+     * Change a setting. This will write to configuration files, but does not
+     * restart any running server instance.
      * 
      * @param key
      * @param value
@@ -296,7 +141,7 @@ public class ServerProperties implements Representation
      * @throws NoSuchPropertyException if no property with the given key exists.
      * @throws IllegalArgumentException if trying to set an invalid value
      */
-    public void set( String key, String value ) throws IOException
+    public synchronized void set( String key, String value ) throws IOException
     {
         ServerPropertyRepresentation prop = this.get( key );
 
